--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>IDE by rapha1004</title>
 </head>
 <body>
-    <textarea name="" id="HTML" cols="30" rows="10"></textarea>
-    <textarea name="" id="CSS" cols="30" rows="10"></textarea>
+    <textarea name="" placeholder="HTML" id="HTML" cols="30" rows="10"></textarea>
+    <textarea name="" id="CSS" placeholder="CSS" cols="30" rows="10"></textarea>
     <div id="divSite"></div>
     <script src="script.js"></script>
 </body>
